--- a/mild-ui/crates/style/src/scss/normalize.scss
+++ b/mild-ui/crates/style/src/scss/normalize.scss
@@ -1,6 +1,3 @@
-/*!********************************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js!./node_modules/normalize.css/normalize.css ***!
-  \********************************************************************************************/
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
@@ -177,7 +174,8 @@ textarea {
  */
 
 button,
-input { /* 1 */
+input {
+  /* 1 */
   overflow: visible;
 }
 
@@ -187,7 +185,8 @@ input { /* 1 */
  */
 
 button,
-select { /* 1 */
+select {
+  /* 1 */
   text-transform: none;
 }
 
@@ -349,17 +348,4 @@ template {
 
 [hidden] {
   display: none;
-}
-
-/*!**********************************************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js!./node_modules/sass-loader/dist/cjs.js!./scss/index.scss ***!
-  \**********************************************************************************************************/
-body {
-  display: flex;
-  width: 100%;
-  justify-content: center;
-}
-body > div {
-  margin: 2rem;
-  font-size: 2rem;
 }
