--- a/mild-ui/crates/docs/assets/style.css
+++ b/mild-ui/crates/docs/assets/style.css
@@ -1,3 +1,6 @@
+/*!********************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./node_modules/normalize.css/normalize.css ***!
+  \********************************************************************************************/
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
@@ -174,8 +177,7 @@ textarea {
  */
 
 button,
-input {
-  /* 1 */
+input { /* 1 */
   overflow: visible;
 }
 
@@ -185,8 +187,7 @@ input {
  */
 
 button,
-select {
-  /* 1 */
+select { /* 1 */
   text-transform: none;
 }
 
@@ -348,4 +349,22 @@ template {
 
 [hidden] {
   display: none;
+}
+
+/*!**********************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./node_modules/sass-loader/dist/cjs.js!./scss/index.scss ***!
+  \**********************************************************************************************************/
+body {
+  align-self: start;
+  background-color: rgb(236, 230, 222);
+  display: flex;
+  justify-content: center;
+  max-width: 0;
+  padding: auto;
+  text-align: center;
+  text-shadow: none;
+}
+body > div {
+  font-size: 2rem;
+  margin: 2rem;
 }
