Improve doc environment

--- a/mild-ui/mild-style/scss/index.scss
+++ b/mild-ui/mild-style/scss/index.scss
@@ -1,1 +1,10 @@
+// config variables
+@import './config/variables';
+
+// config reboot
+@import './config/reboot';
+
+// components
 @import './button';
+
+@im;
