--- a/mild-ui/mild-style/scss/index.scss
+++ b/mild-ui/mild-style/scss/index.scss
@@ -1,3 +1,6 @@
+// config mixins
+@import './config/mixin';
+
 // config variables
 @import './config/variables';
 
@@ -6,5 +9,3 @@
 
 // components
 @import './button';
-
-@im;
