--- a/mild-ui/mild-style/scss/config/_variables.scss
+++ b/mild-ui/mild-style/scss/config/_variables.scss
@@ -38,9 +38,15 @@ $theme-colors: (
   'info': $info,
   'warning': $warning,
   'danger': $danger,
-  'light': $light,
-  'dark': $dark,
 );
+
+//border and border radius
+$border-width: 1px !default;
+$border-color: $gray-300 !default;
+
+$border-radius: 0.25rem !default;
+$border-radius-lg: 0.3rem !default;
+$border-radius-sm: 0.2rem !default;
 
 // font
 $font-family-sans-serif: -apple-system, blinkmacsystemfont, 'Segoe UI', roboto,
@@ -130,3 +136,36 @@ $enable-pointer-cursor-for-buttons: true !default;
 $legend-margin-bottom: 0.5rem !default;
 $legend-font-size: 1.5rem !default;
 $legend-font-weight: null !default;
+
+// button
+// basic button variables
+$btn-font-weight: 400;
+$btn-font-family: $font-family-base !default;
+$btn-font-size: $font-size-base !default;
+$btn-padding-y: 0.375rem !default;
+$btn-padding-x: 0.75rem !default;
+$btn-line-height: $line-height-base !default;
+
+// different size button
+$btn-font-size-sm: $font-size-sm !default;
+$btn-padding-y-sm: 0.25rem !default;
+$btn-padding-x-sm: 0.5rem !default;
+
+$btn-font-size-lg: $font-size-lg !default;
+$btn-padding-y-lg: 0.5rem !default;
+$btn-padding-x-lg: 1rem !default;
+
+// button border
+$btn-border-width: $border-width !default;
+
+// button other
+$btn-box-shadow: inset 0 1px 0 rgba($white, 0.15), 0 1px 1px rgba($black, 0.075) !default;
+$btn-disabled-opacity: 0.65 !default;
+
+$btn-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+  border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out !default;
+
+// link button
+$btn-link-color: $link-color !default;
+$btn-link-hover-color: $link-hover-color !default;
+$btn-link-disabled-color: $gray-600 !default;
