Improve button props

--- a/mild-ui/mild-style/scss/config/_variables.scss
+++ b/mild-ui/mild-style/scss/config/_variables.scss
@@ -38,7 +38,7 @@ $theme-colors: (
   'info': $info,
   'warning': $warning,
   'danger': $danger,
-);
+) !default;
 
 //border and border radius
 $border-width: 1px !default;
@@ -139,6 +139,12 @@ $legend-font-weight: null !default;
 
 // button
 // basic button variables
+$btn-theme-colors: (
+  'primary': $primary,
+  'secondary': $secondary,
+  'danger': $danger,
+) !default;
+
 $btn-font-weight: 400;
 $btn-font-family: $font-family-base !default;
 $btn-font-size: $font-size-base !default;
