--- a/mild-ui/mild-style/scss/button.scss
+++ b/mild-ui/mild-style/scss/button.scss
@@ -45,7 +45,7 @@
   );
 }
 
-.btn-default {
+.btn-text {
   @include button-style(
     $white,
     $gray-400,
@@ -56,7 +56,7 @@
   );
 }
 
-@each $color, $value in $theme-colors {
+@each $color, $value in $btn-theme-colors {
   .btn-#{$color} {
     @include button-style($value, $value, $white);
   }
