--- a/mild-ui/mild-style/scss/config/_variables.scss
+++ b/mild-ui/mild-style/scss/config/_variables.scss
@@ -1,35 +1,335 @@
 // color
 $white: #fff !default;
-$gray-100: #f8f9fa !default;
-$gray-200: #e9ecef !default;
-$gray-300: #dee2e6 !default;
-$gray-400: #ced4da !default;
-$gray-500: #adb5bd !default;
-$gray-600: #6c757d !default;
-$gray-700: #495057 !default;
-$gray-800: #343a40 !default;
-$gray-900: #212529 !default;
 $black: #000 !default;
 
-$blue: #0d6efd !default;
-$indigo: #6610f2 !default;
-$purple: #6f42c1 !default;
-$pink: #d63384 !default;
-$red: #dc3545 !default;
-$orange: #fd7e14 !default;
-$yellow: #fadb14 !default;
-$green: #52c41a !default;
-$teal: #20c997 !default;
-$cyan: #17a2b8 !default;
+// amber colors
+$amber-50: #fff8e1 !default;
+$amber-100: #ffecb3 !default;
+$amber-200: #ffe082 !default;
+$amber-300: #ffd54f !default;
+$amber-400: #ffca28 !default;
+$amber-500: #ffc107 !default;
+$amber-600: #ffb300 !default;
+$amber-700: #ffa000 !default;
+$amber-800: #ff8f00 !default;
+$amber-900: #ff6f00 !default;
+$amber-a100: #ffe57f !default;
+$amber-a200: #ffd740 !default;
+$amber-a400: #ffc400 !default;
+$amber-a700: #ffab00 !default;
 
-$primary: $blue !default;
-$secondary: $gray-600 !default;
-$success: $green !default;
-$info: $cyan !default;
-$warning: $yellow !default;
-$danger: $red !default;
-$light: $gray-100 !default;
-$dark: $gray-800 !default;
+// blue colors
+$blue-50: #e3f2fd !default;
+$blue-100: #bbdefb !default;
+$blue-200: #90caf9 !default;
+$blue-300: #64b5f6 !default;
+$blue-400: #42a5f5 !default;
+$blue-500: #2196f3 !default;
+$blue-600: #1e88e5 !default;
+$blue-700: #1976d2 !default;
+$blue-800: #1565c0 !default;
+$blue-900: #0d47a1 !default;
+$blue-a100: #82b1ff !default;
+$blue-a200: #448aff !default;
+$blue-a400: #2979ff !default;
+$blue-a700: #2962ff !default;
+
+// blue gray colors
+$blue-gray-50: #eceff1 !default;
+$blue-gray-100: #cfd8dc !default;
+$blue-gray-200: #b0bec5 !default;
+$blue-gray-300: #90a4ae !default;
+$blue-gray-400: #78909c !default;
+$blue-gray-500: #607d8b !default;
+$blue-gray-600: #546e7a !default;
+$blue-gray-700: #455a64 !default;
+$blue-gray-800: #37474f !default;
+$blue-gray-900: #263238 !default;
+$blue-gray-a100: #cfd8dc !default;
+$blue-gray-a200: #b0bec5 !default;
+$blue-gray-a400: #78909c !default;
+$blue-gray-a700: #455a64 !default;
+
+// brown colors
+$brown-50: #efebe9 !default;
+$brown-100: #d7ccc8 !default;
+$brown-200: #bcaaa4 !default;
+$brown-300: #a1887f !default;
+$brown-400: #8d6e63 !default;
+$brown-500: #795548 !default;
+$brown-600: #6d4c41 !default;
+$brown-700: #5d4037 !default;
+$brown-800: #4e342e !default;
+$brown-900: #3e2723 !default;
+$brown-a100: #d7ccc8 !default;
+$brown-a200: #bcaaa4 !default;
+$brown-a400: #8d6e63 !default;
+$brown-a700: #5d4037 !default;
+
+// cyan colors
+$cyan-50: #e0f7fa !default;
+$cyan-100: #b2ebf2 !default;
+$cyan-200: #80deea !default;
+$cyan-300: #4dd0e1 !default;
+$cyan-400: #26c6da !default;
+$cyan-500: #00bcd4 !default;
+$cyan-600: #00acc1 !default;
+$cyan-700: #0097a7 !default;
+$cyan-800: #00838f !default;
+$cyan-900: #006064 !default;
+$cyan-a100: #84ffff !default;
+$cyan-a200: #18ffff !default;
+$cyan-a400: #00e5ff !default;
+$cyan-a700: #00b8d4 !default;
+
+// deep orange colors
+$deep-orange-50: #fbe9e7 !default;
+$deep-orange-100: #ffccbc !default;
+$deep-orange-200: #ffab91 !default;
+$deep-orange-300: #ff8a65 !default;
+$deep-orange-400: #ff7043 !default;
+$deep-orange-500: #ff5722 !default;
+$deep-orange-600: #f4511e !default;
+$deep-orange-700: #e64a19 !default;
+$deep-orange-800: #d84315 !default;
+$deep-orange-900: #bf360c !default;
+$deep-orange-a100: #ff9e80 !default;
+$deep-orange-a200: #ff6e40 !default;
+$deep-orange-a400: #ff3d00 !default;
+$deep-orange-a700: #dd2c00 !default;
+
+// deep purple colors
+$deep-purple-50: #ede7f6 !default;
+$deep-purple-100: #d1c4e9 !default;
+$deep-purple-200: #b39ddb !default;
+$deep-purple-300: #9575cd !default;
+$deep-purple-400: #7e57c2 !default;
+$deep-purple-500: #673ab7 !default;
+$deep-purple-600: #5e35b1 !default;
+$deep-purple-700: #512da8 !default;
+$deep-purple-800: #4527a0 !default;
+$deep-purple-900: #311b92 !default;
+$deep-purple-a100: #b388ff !default;
+$deep-purple-a200: #7c4dff !default;
+$deep-purple-a400: #651fff !default;
+$deep-purple-a700: #6200ea !default;
+
+// green colors
+$green-50: #e8f5e9 !default;
+$green-100: #c8e6c9 !default;
+$green-200: #a5d6a7 !default;
+$green-300: #81c784 !default;
+$green-400: #66bb6a !default;
+$green-500: #4caf50 !default;
+$green-600: #43a047 !default;
+$green-700: #388e3c !default;
+$green-800: #2e7d32 !default;
+$green-900: #1b5e20 !default;
+$green-a100: #b9f6ca !default;
+$green-a200: #69f0ae !default;
+$green-a400: #00e676 !default;
+$green-a700: #00c853 !default;
+
+// gray colors
+$gray-50: #fafafa !default;
+$gray-100: #f5f5f5 !default;
+$gray-200: #eee !default;
+$gray-300: #e0e0e0 !default;
+$gray-400: #bdbdbd !default;
+$gray-500: #9e9e9e !default;
+$gray-600: #757575 !default;
+$gray-700: #616161 !default;
+$gray-800: #424242 !default;
+$gray-900: #212121 !default;
+$gray-a100: #d5d5d5 !default;
+$gray-a200: #aaa !default;
+$gray-a400: #303030 !default;
+$gray-a700: #616161 !default;
+
+// indigo colors
+$indigo-50: #e8eaf6 !default;
+$indigo-100: #c5cae9 !default;
+$indigo-200: #9fa8da !default;
+$indigo-300: #7986cb !default;
+$indigo-400: #5c6bc0 !default;
+$indigo-500: #3f51b5 !default;
+$indigo-600: #3949ab !default;
+$indigo-700: #303f9f !default;
+$indigo-800: #283593 !default;
+$indigo-900: #1a237e !default;
+$indigo-a100: #8c9eff !default;
+$indigo-a200: #536dfe !default;
+$indigo-a400: #3d5afe !default;
+$indigo-a700: #304ffe !default;
+
+// light blue colors
+$light-blue-50: #e1f5fe !default;
+$light-blue-100: #b3e5fc !default;
+$light-blue-200: #81d4fa !default;
+$light-blue-300: #4fc3f7 !default;
+$light-blue-400: #29b6f6 !default;
+$light-blue-500: #03a9f4 !default;
+$light-blue-600: #039be5 !default;
+$light-blue-700: #0288d1 !default;
+$light-blue-800: #0277bd !default;
+$light-blue-900: #01579b !default;
+$light-blue-a100: #80d8ff !default;
+$light-blue-a200: #40c4ff !default;
+$light-blue-a400: #00b0ff !default;
+$light-blue-a700: #0091ea !default;
+
+// light green colors
+$light-green-50: #f1f8e9 !default;
+$light-green-100: #dcedc8 !default;
+$light-green-200: #c5e1a5 !default;
+$light-green-300: #aed581 !default;
+$light-green-400: #9ccc65 !default;
+$light-green-500: #8bc34a !default;
+$light-green-600: #7cb342 !default;
+$light-green-700: #689f38 !default;
+$light-green-800: #558b2f !default;
+$light-green-900: #33691e !default;
+$light-green-a100: #ccff90 !default;
+$light-green-a200: #b2ff59 !default;
+$light-green-a400: #76ff03 !default;
+$light-green-a700: #64dd17 !default;
+
+// lime colors
+$lime-50: #f9fbe7 !default;
+$lime-100: #f0f4c3 !default;
+$lime-200: #e6ee9c !default;
+$lime-300: #dce775 !default;
+$lime-400: #d4e157 !default;
+$lime-500: #cddc39 !default;
+$lime-600: #c0ca33 !default;
+$lime-700: #afb42b !default;
+$lime-800: #9e9d24 !default;
+$lime-900: #827717 !default;
+$lime-a100: #f4ff81 !default;
+$lime-a200: #eeff41 !default;
+$lime-a400: #c6ff00 !default;
+$lime-a700: #aeea00 !default;
+
+// orange colors
+$orange-50: #fff3e0 !default;
+$orange-100: #ffe0b2 !default;
+$orange-200: #ffcc80 !default;
+$orange-300: #ffb74d !default;
+$orange-400: #ffa726 !default;
+$orange-500: #ff9800 !default;
+$orange-600: #fb8c00 !default;
+$orange-700: #f57c00 !default;
+$orange-800: #ef6c00 !default;
+$orange-900: #e65100 !default;
+$orange-a100: #ffd180 !default;
+$orange-a200: #ffab40 !default;
+$orange-a400: #ff9100 !default;
+$orange-a700: #ff6d00 !default;
+
+// pink colors
+$pink-50: #fce4ec !default;
+$pink-100: #f8bbd0 !default;
+$pink-200: #f48fb1 !default;
+$pink-300: #f06292 !default;
+$pink-400: #ec407a !default;
+$pink-500: #e91e63 !default;
+$pink-600: #d81b60 !default;
+$pink-700: #c2185b !default;
+$pink-800: #ad1457 !default;
+$pink-900: #880e4f !default;
+$pink-a100: #ff80ab !default;
+$pink-a200: #ff4081 !default;
+$pink-a400: #f50057 !default;
+$pink-a700: #c51162 !default;
+
+// purple colors
+$purple-50: #f3e5f5 !default;
+$purple-100: #e1bee7 !default;
+$purple-200: #ce93d8 !default;
+$purple-300: #ba68c8 !default;
+$purple-400: #ab47bc !default;
+$purple-500: #9c27b0 !default;
+$purple-600: #8e24aa !default;
+$purple-700: #7b1fa2 !default;
+$purple-800: #6a1b9a !default;
+$purple-900: #4a148c !default;
+$purple-a100: #ea80fc !default;
+$purple-a200: #e040fb !default;
+$purple-a400: #d500f9 !default;
+$purple-a700: #a0f !default;
+
+// red colors
+$red-50: #ffebee !default;
+$red-100: #ffcdd2 !default;
+$red-200: #ef9a9a !default;
+$red-300: #e57373 !default;
+$red-400: #ef5350 !default;
+$red-500: #f44336 !default;
+$red-600: #e53935 !default;
+$red-700: #d32f2f !default;
+$red-800: #c62828 !default;
+$red-900: #b71c1c !default;
+$red-a100: #ff8a80 !default;
+$red-a200: #ff5252 !default;
+$red-a400: #ff1744 !default;
+$red-a700: #d50000 !default;
+
+// teal colors
+$teal-50: #e0f2f1 !default;
+$teal-100: #b2dfdb !default;
+$teal-200: #80cbc4 !default;
+$teal-300: #4db6ac !default;
+$teal-400: #26a69a !default;
+$teal-500: #009688 !default;
+$teal-600: #00897b !default;
+$teal-700: #00796b !default;
+$teal-800: #00695c !default;
+$teal-900: #004d40 !default;
+$teal-a100: #a7ffeb !default;
+$teal-a200: #64ffda !default;
+$teal-a400: #1de9b6 !default;
+$teal-a700: #00bfa5 !default;
+
+// yellow colors
+$yellow-50: #fffde7 !default;
+$yellow-100: #fff9c4 !default;
+$yellow-200: #fff59d !default;
+$yellow-300: #fff176 !default;
+$yellow-400: #ffee58 !default;
+$yellow-500: #ffeb3b !default;
+$yellow-600: #fdd835 !default;
+$yellow-700: #fbc02d !default;
+$yellow-800: #f9a825 !default;
+$yellow-900: #f57f17 !default;
+$yellow-a100: #ffff8d !default;
+$yellow-a200: #ff0 !default;
+$yellow-a400: #ffea00 !default;
+$yellow-a700: #ffd600 !default;
+
+// classic colors
+$primary: $blue-700 !default;
+$primary-light: $blue-500 !default;
+$primary-dark: $blue-900 !default;
+
+$secondary: $pink-700 !default;
+$secondary-light: $pink-500 !default;
+$secondary-dark: $pink-900 !default;
+
+$success: $green-800 !default;
+$success-light: $green-500 !default;
+$success-dark: $green-900 !default;
+
+$info: $cyan-700 !default;
+$info-light: $teal-500 !default;
+$info-dark: $teal-900 !default;
+
+$warning: $yellow-700 !default;
+$warning-light: $yellow-500 !default;
+$warning-dark: $yellow-900 !default;
+
+$error: $red-700 !default;
+$error-light: $red-500 !default;
+$error-dark: $red-900 !default;
 
 $theme-colors: (
   'primary': $primary,
@@ -37,8 +337,26 @@ $theme-colors: (
   'success': $success,
   'info': $info,
   'warning': $warning,
-  'danger': $danger,
+  'error': $error,
 ) !default;
+
+// The colors used to style the text
+$text-primary: rgba(0, 0, 0, 0.87) !default;
+$text-secondary: rgba(0, 0, 0, 0.55) !default;
+$text-disabled: rgba(0, 0, 0, 0.38) !default;
+$text-tip: rgba(0, 0, 0, 0.38) !default;
+
+// The color used to  divide different element
+$divider-color: rgba(0, 0, 0, 0.12);
+
+// action colors
+$action-active: rgba(0, 0, 0, 0.55) !default;
+$action-hover: 12% !default;
+$action-hover-opacity: 0.12 !default;
+$action-hover-fade-out: 0.88 !default;
+$action-selected: rgba(0, 0, 0, 0.14) !default;
+$action-disabled: rgba(0, 0, 0, 0.26) !default;
+$action-disable-background: rgba(0, 0, 0, 0.12) !default;
 
 //border and border radius
 $border-width: 1px !default;
@@ -71,6 +389,7 @@ $sub-sup-font-size: 0.75em !default;
 $font-weight-lighter: lighter !default;
 $font-weight-light: 300 !default;
 $font-weight-normal: 400 !default;
+$font-weight-medium: 500 !default;
 $font-weight-bold: 700 !default;
 $font-weight-bolder: bolder !default;
 $font-weight-base: $font-weight-normal !default;
@@ -90,7 +409,7 @@ $paragraph-margin-bottom: 1rem !default;
 $text-muted: $gray-600 !default;
 
 // Spacing
-$spacer: 1rem !default;
+$spacer: 0.5rem !default;
 
 // header size
 $h1-font-size: $font-size-base * 2.5 !default;
@@ -100,7 +419,7 @@ $h4-font-size: $font-size-base * 1.5 !default;
 $h5-font-size: $font-size-base * 1.25 !default;
 $h6-font-size: $font-size-base !default;
 
-$headings-margin-bottom: calc($spacer / 2) !default;
+$headings-margin-bottom: $spacer !default;
 $headings-font-family: null !default;
 $headings-font-style: null !default;
 $headings-font-weight: 500 !default;
@@ -113,23 +432,23 @@ $link-decoration: none !default;
 $link-hover-color: lighten($link-color, 10%) !default;
 $link-hover-decoration: underline !default;
 
-$danger-link-color: $danger !default;
+$danger-link-color: $error !default;
 $danger-link-hover-color: lighten($danger-link-color, 10%) !default;
 
 // body
 $body-bg: $white !default;
-$body-color: $gray-900 !default;
+$body-color: $text-primary !default;
 $body-text-align: null !default;
 
 // hr
 $hr-color: inherit !default;
 $hr-height: 1px !default;
 $hr-opacity: 0.25 !default;
-$hr-margin-y: $spacer !default;
+$hr-margin-y: $spacer * 2 !default;
 
 // Code
 $code-font-size: $small-font-size !default;
-$code-color: $pink !default;
+$code-color: $pink-500 !default;
 $pre-color: null !default;
 
 // options
@@ -140,21 +459,23 @@ $legend-margin-bottom: 0.5rem !default;
 $legend-font-size: 1.5rem !default;
 $legend-font-weight: null !default;
 
-$btn-font-weight: 400;
+// button variables
+$btn-font-weight: $font-weight-medium !default;
 $btn-font-family: $font-family-base !default;
-$btn-font-size: $font-size-base !default;
-$btn-padding-y: 0.375rem !default;
-$btn-padding-x: 0.75rem !default;
-$btn-line-height: $line-height-base !default;
+$btn-line-height: 1.25rem !default;
+
+$btn-font-size: $font-size-base * 0.875 !default;
+$btn-padding-y: 0.5rem !default;
+$btn-padding-x: 1rem !default;
 
 // different size button
 $btn-font-size-sm: $font-size-sm !default;
-$btn-padding-y-sm: 0.25rem !default;
+$btn-padding-y-sm: 0.5rem !default;
 $btn-padding-x-sm: 0.5rem !default;
 
 $btn-font-size-lg: $font-size-lg !default;
 $btn-padding-y-lg: 0.5rem !default;
-$btn-padding-x-lg: 1rem !default;
+$btn-padding-x-lg: 1.5rem !default;
 
 // button border
 $btn-border-width: $border-width !default;
