--- a/mild-ui/mild-style/scss/config/_variables.scss
+++ b/mild-ui/mild-style/scss/config/_variables.scss
@@ -459,6 +459,20 @@ $legend-margin-bottom: 0.5rem !default;
 $legend-font-size: 1.5rem !default;
 $legend-font-weight: null !default;
 
+// animation
+$ease-in-out: cubic-bezier(0.4, 0, 0.2, 1) !default;
+$ease-out: cubic-bezier(0, 0, 0.2, 1) !default;
+$ease-in: cubic-bezier(0.4, 0, 1, 1) !default;
+$sharp: cubic-bezier(0.4, 0, 0.6, 1) !default;
+
+$duration-shortest: 150 !default;
+$duration-shorter: 200 !default;
+$duration-short: 250 !default;
+$duration-standard: 300 !default;
+$duration-complex: 375 !default;
+$duration-entering-screen: 225 !default;
+$duration-leaving-screen: 195 !default;
+
 // button variables
 $btn-font-weight: $font-weight-medium !default;
 $btn-font-family: $font-family-base !default;
@@ -494,3 +508,6 @@ $btn-link-hover-color: $link-hover-color !default;
 // danger link
 $btn-danger-link-color: $danger-link-color !default;
 $btn-danger-link-hover-color: $danger-link-hover-color !default;
+
+// button ripple
+$ripple-duration: 550 !default;
