--- a/mild-ui/mild-style/scss/button/ripple.scss
+++ b/mild-ui/mild-style/scss/button/ripple.scss
@@ -27,8 +27,7 @@
     }
 
     &-pulsate {
-      animation: name duration timing-function delay iteration-count direction
-        fill-mode;
+      animation: pulsate 2500ms $ease-in-out 200ms infinite;
       left: 0;
       position: absolute;
       top: 0;
