--- a/mild-ui/mild-style/scss/button/ripple.scss
+++ b/mild-ui/mild-style/scss/button/ripple.scss
@@ -1,55 +1,27 @@
-.ripple {
-  opacity: 0;
+.ripple_wrapper {
+  bottom: 0;
+  display: inline-flex;
+  left: 0;
+  overflow: hidden;
   position: absolute;
+  right: 0;
+  top: 0;
+}
 
-  &-visible {
-    animation: enter $ripple-duration $ease-in-out;
-    opacity: 0.3;
-    transform: scale(1);
-  }
+.ripple {
+  background-color: currentcolor;
+  display: block;
+  opacity: 1;
+  pointer-events: none;
 
-  &-pulsate {
-    animation-duration: $duration-shorter;
-  }
-
-  // ripple child
-  &_child {
-    background-color: currentcolor;
-    border-radius: 50%;
-    display: block;
-    height: 100%;
-    opacity: 1;
-    width: 100%;
-
-    &-leaving {
-      animation: exit $ripple-duration $ease-in-out;
-      opacity: 0;
-    }
-
-    &-pulsate {
-      animation: pulsate 2500ms $ease-in-out 200ms infinite;
-      left: 0;
-      position: absolute;
-      top: 0;
-    }
+  &-exiting {
+    animation: ripple-exiting $ripple-duration $ease-in-out;
+    opacity: 0;
   }
 }
 
-// ripple visible animation
-@keyframes enter {
-  0% {
-    opacity: 0.1;
-    transform: scale(0);
-  }
-
-  100% {
-    opacity: 0.3;
-    transform: scale(1);
-  }
-}
-
-// ripple child leaving animation
-@keyframes exit {
+// ripple exiting animation
+@keyframes ripple-exiting {
   0% {
     opacity: 1;
   }
@@ -59,14 +31,29 @@
   }
 }
 
-// ripple child pulsate animation
-@keyframes pulsate {
-  0% {
+// ripple item
+.ripple_item {
+  background-color: currentcolor;
+  border-radius: 50%;
+  display: block;
+  height: rem(50px);
+  left: 0;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  width: rem(50px);
+
+  &-entering {
+    animation: item-entering $ripple-duration $ease-in-out;
+    opacity: 0.3;
     transform: scale(1);
   }
+}
 
-  50% {
-    transform: scale(0.92);
+// ripple item entering animation
+@keyframes item-entering {
+  0% {
+    transform: scale(0);
   }
 
   100% {
