--- a/mild-ui/mild-style/scss/button/ripple.scss
+++ b/mild-ui/mild-style/scss/button/ripple.scss
@@ -10,23 +10,27 @@
 
 .ripple {
   display: block;
-  opacity: 1;
+  opacity: 0;
   pointer-events: none;
+  position: absolute;
 
-  &-exiting {
-    animation: ripple-exiting $ripple-duration $ease-in-out;
-    opacity: 0;
+  &-visible {
+    animation: ripple-visible $ripple-duration $ease-in-out;
+    opacity: 0.6;
+    transform: scale(1);
   }
 }
 
-// ripple exiting animation
-@keyframes ripple-exiting {
+// ripple visible animation
+@keyframes ripple-visible {
   0% {
-    opacity: 1;
+    opacity: 0.3;
+    transform: scale(0);
   }
 
   100% {
-    opacity: 0;
+    opacity: 0.6;
+    transform: scale(1);
   }
 }
 
@@ -35,32 +39,23 @@
   background-color: currentcolor;
   border-radius: 50%;
   display: block;
-  height: rem(50px);
-  left: 0;
-  opacity: 0;
-  position: absolute;
-  top: 0;
-  width: rem(50px);
+  height: 100%;
+  opacity: 1;
+  width: 100%;
 
   &-entering {
     animation: item-entering $ripple-duration $ease-in-out;
     opacity: 0.3;
-    transform: scale(1);
-  }
-
-  &-entered {
-    opacity: 0.3;
-    transform: scale(1);
   }
 }
 
 // ripple item entering animation
 @keyframes item-entering {
   0% {
-    transform: scale(0);
+    opacity: 1;
   }
 
   100% {
-    transform: scale(1);
+    opacity: 0.3;
   }
 }
