update button size

--- a/mild-ui/mild-style/scss/button/index.scss
+++ b/mild-ui/mild-style/scss/button/index.scss
@@ -19,7 +19,7 @@
   justify-content: center;
   line-height: $btn-line-height;
   min-height: rem(36px);
-  min-width: $spacer * 11;
+  min-width: rem(64px);
   outline: none;
   overflow: hidden;
   position: relative;
