--- a/mild-ui/mild-style/scss/config/_variables.scss
+++ b/mild-ui/mild-style/scss/config/_variables.scss
@@ -358,6 +358,64 @@ $action-selected: rgba(0, 0, 0, 0.14) !default;
 $action-disabled: rgba(0, 0, 0, 0.26) !default;
 $action-disable-background: rgba(0, 0, 0, 0.12) !default;
 
+// shadows
+$shadow-umbra-color: rgba(0, 0, 0, 0.2) !default;
+$shadow-penumbra-color: rgba(0, 0, 0, 0.14) !default;
+$shadow-ambient-color: rgba(0, 0, 0, 0.12) !default;
+
+// Values from https://github.com/material-components/material-components-web/blob/be8747f94574669cb5e7add1a7c54fa41a89cec7/packages/mdc-elevation/_variables.scss
+$shadow-1: (0, 2, 1, -1, 0, 1, 1, 0, 0, 1, 3, 0) !default;
+$shadow-2: (0, 3, 1, -2, 0, 2, 2, 0, 0, 1, 5, 0) !default;
+$shadow-3: (0, 3, 3, -2, 0, 3, 4, 0, 0, 1, 8, 0) !default;
+$shadow-4: (0, 2, 4, -1, 0, 4, 5, 0, 0, 1, 10, 0) !default;
+$shadow-5: (0, 3, 5, -1, 0, 5, 8, 0, 0, 1, 14, 0) !default;
+$shadow-6: (0, 3, 5, -1, 0, 6, 10, 0, 0, 1, 18, 0) !default;
+$shadow-7: (0, 4, 5, -2, 0, 7, 10, 1, 0, 2, 16, 1) !default;
+$shadow-8: (0, 5, 5, -3, 0, 8, 10, 1, 0, 3, 14, 2) !default;
+$shadow-9: (0, 5, 6, -3, 0, 9, 12, 1, 0, 3, 16, 2) !default;
+$shadow-10: (0, 6, 6, -3, 0, 10, 14, 1, 0, 4, 18, 3) !default;
+$shadow-11: (0, 6, 7, -4, 0, 11, 15, 1, 0, 4, 20, 3) !default;
+$shadow-12: (0, 7, 8, -4, 0, 12, 17, 2, 0, 5, 22, 4) !default;
+$shadow-13: (0, 7, 8, -4, 0, 13, 19, 2, 0, 5, 24, 4) !default;
+$shadow-14: (0, 7, 9, -4, 0, 14, 21, 2, 0, 5, 26, 4) !default;
+$shadow-15: (0, 8, 9, -5, 0, 15, 22, 2, 0, 6, 28, 5) !default;
+$shadow-16: (0, 8, 10, -5, 0, 16, 24, 2, 0, 6, 30, 5) !default;
+$shadow-17: (0, 8, 11, -5, 0, 17, 26, 2, 0, 6, 32, 5) !default;
+$shadow-18: (0, 9, 11, -5, 0, 18, 28, 2, 0, 7, 34, 6) !default;
+$shadow-19: (0, 9, 12, -6, 0, 19, 29, 2, 0, 7, 36, 6) !default;
+$shadow-20: (0, 10, 13, -6, 0, 20, 31, 3, 0, 8, 38, 7) !default;
+$shadow-21: (0, 10, 13, -6, 0, 21, 33, 3, 0, 8, 40, 7) !default;
+$shadow-22: (0, 10, 14, -6, 0, 22, 35, 3, 0, 8, 42, 7) !default;
+$shadow-23: (0, 11, 14, -7, 0, 23, 36, 3, 0, 9, 44, 8) !default;
+$shadow-24: (0, 11, 15, -7, 0, 24, 38, 3, 0, 9, 46, 8) !default;
+
+$shadows: (
+  $shadow-1,
+  $shadow-2,
+  $shadow-3,
+  $shadow-4,
+  $shadow-5,
+  $shadow-6,
+  $shadow-7,
+  $shadow-8,
+  $shadow-9,
+  $shadow-10,
+  $shadow-11,
+  $shadow-12,
+  $shadow-13,
+  $shadow-14,
+  $shadow-15,
+  $shadow-16,
+  $shadow-17,
+  $shadow-18,
+  $shadow-19,
+  $shadow-20,
+  $shadow-21,
+  $shadow-22,
+  $shadow-23,
+  $shadow-24
+) !default;
+
 //border and border radius
 $border-width: 1px !default;
 $border-color: $gray-300 !default;
@@ -476,32 +534,31 @@ $duration-leaving-screen: 195ms !default;
 // button variables
 $btn-font-weight: $font-weight-medium !default;
 $btn-font-family: $font-family-base !default;
-$btn-line-height: rem(22px) !default;
+$btn-line-height: 1.375rem !default; // 22px
 
-$btn-font-size: rem(14px) !default;
-$btn-padding-y: rem(7px) !default;
-$btn-padding-x: rem(16px) !default;
-$btn-padding-outlined-y: rem(6px) !default;
-$btn-padding-outlined-x: rem(15px) !default;
+$btn-font-size: 0.875rem !default; // 14px
+$btn-padding-y: 0.4375rem !default; // 7px
+$btn-padding-x: 1rem !default; // 16px
+$btn-padding-outlined-y: 0.375rem !default; // 6px
+$btn-padding-outlined-x: 0.9375rem !default; // 15px
 
 // different size button
-$btn-font-size-sm: rem(13px) !default;
-$btn-padding-y-sm: rem(4px) !default;
-$btn-padding-x-sm: rem(10px) !default;
-$btn-padding-outlined-y-sm: rem(3px) !default;
-$btn-padding-outlined-x-sm: rem(9px) !default;
+$btn-font-size-sm: 0.8125rem !default; // 13px
+$btn-padding-y-sm: 0.25rem !default; // 4px
+$btn-padding-x-sm: 0.625rem !default; // 10px
+$btn-padding-outlined-y-sm: 0.1875rem !default; // 3px
+$btn-padding-outlined-x-sm: 0.5625rem !default; // 9px
 
-$btn-font-size-lg: rem(15px) !default;
-$btn-padding-y-lg: rem(10px) !default;
-$btn-padding-x-lg: rem(22px) !default;
-$btn-padding-outlined-y-lg: rem(9px) !default;
-$btn-padding-outlined-x-lg: rem(21px) !default;
+$btn-font-size-lg: 0.9375rem !default; // 15px
+$btn-padding-y-lg: 0.625rem !default; // 10px
+$btn-padding-x-lg: 1.375rem !default; // 22px
+$btn-padding-outlined-y-lg: 0.5625rem !default; // 9px
+$btn-padding-outlined-x-lg: 1.3125rem !default; // 21px
 
 // button border
 $btn-border-width: $border-width !default;
 
 // button other
-$btn-box-shadow: inset 0 1px 0 rgba($white, 0.15), 0 1px 1px rgba($black, 0.075) !default;
 $btn-disabled-opacity: 0.6 !default;
 
 $btn-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
