Improve Button disabled state

--- a/mild-ui/mild-style/scss/button/index.scss
+++ b/mild-ui/mild-style/scss/button/index.scss
@@ -60,9 +60,7 @@ $button-sizes: (
   vertical-align: middle;
   white-space: nowrap;
 
-  &.disabled {
-    box-shadow: none;
-    cursor: default;
+  &-disabled {
     opacity: $btn-disabled-opacity;
     pointer-events: none;
   }
