--- a/mild-ui/mild-style/scss/config/_variables.scss
+++ b/mild-ui/mild-style/scss/config/_variables.scss
@@ -539,24 +539,18 @@ $btn-line-height: 1.375rem !default; // 22px
 $btn-font-size: 0.875rem !default; // 14px
 $btn-padding-y: 0.4375rem !default; // 7px
 $btn-padding-x: 1rem !default; // 16px
-$btn-padding-outlined-y: 0.375rem !default; // 6px
-$btn-padding-outlined-x: 0.9375rem !default; // 15px
 
 // different size button
 $btn-font-size-sm: 0.8125rem !default; // 13px
 $btn-padding-y-sm: 0.25rem !default; // 4px
 $btn-padding-x-sm: 0.625rem !default; // 10px
-$btn-padding-outlined-y-sm: 0.1875rem !default; // 3px
-$btn-padding-outlined-x-sm: 0.5625rem !default; // 9px
 
 $btn-font-size-lg: 0.9375rem !default; // 15px
 $btn-padding-y-lg: 0.625rem !default; // 10px
 $btn-padding-x-lg: 1.375rem !default; // 22px
-$btn-padding-outlined-y-lg: 0.5625rem !default; // 9px
-$btn-padding-outlined-x-lg: 1.3125rem !default; // 21px
 
-// button border
-$btn-border-width: $border-width !default;
+// button outline
+$btn-outline-width: 1px !default;
 
 // button other
 $btn-disabled-opacity: 0.6 !default;
